# RayTracer

./: .gitignore  CMakeLists.txt  Debug.h  README.md  conanfile.txt
App/: CMakeLists.txt  config.json  cornell_box_config.json  delta_fractal_config.json  dragon_config.json  lucy_config.json  main.cpp  main.cu  sibenik_config.json  sierpinski_fractal_config.json  sponza_config.json  square_fractal_config.json  test_config.json
App/path_tracer/cornell_box/: cornell_box_bf_config.json  cornell_box_bvh_config.json  cornell_box_cuda_bf_config.json  cornell_box_cuda_bvh_config.json  cornell_box_cuda_kdtree_config.json  cornell_box_kdtree_config.json
App/path_tracer/delta_fractal/: delta_fractal_bf_config.json  delta_fractal_bvh_config.json  delta_fractal_cuda_bf_config.json  delta_fractal_cuda_bvh_config.json  delta_fractal_cuda_kdtree_config.json  delta_fractal_kdtree_config.json
App/path_tracer/dragon/: dragon_bf_config.json  dragon_bvh_config.json  dragon_cuda_bf_config.json  dragon_cuda_bvh_config.json  dragon_cuda_kdtree_config.json  dragon_kdtree_config.json
App/path_tracer/lucy/: lucy_bf_config.json  lucy_bvh_config.json  lucy_cuda_bf_config.json  lucy_cuda_bvh_config.json  lucy_cuda_kdtree_config.json  lucy_kdtree_config.json
App/path_tracer/sibenik/: sibenik_bf_config.json  sibenik_bvh_config.json  sibenik_cuda_bf_config.json  sibenik_cuda_bvh_config.json  sibenik_cuda_kdtree_config.json  sibenik_kdtree_config.json
App/path_tracer/sierpinski_fractal/: sierpinski_fractal_bf_config.json  sierpinski_fractal_bvh_config.json  sierpinski_fractal_cuda_bf_config.json  sierpinski_fractal_cuda_bvh_config.json  sierpinski_fractal_cuda_kdtree_config.json  sierpinski_fractal_kdtree_config.json
App/path_tracer/sponza/: sponza_bf_config.json  sponza_bvh_config.json  sponza_cuda_bf_config.json  sponza_cuda_bvh_config.json  sponza_cuda_kdtree_config.json  sponza_kdtree_config.json
App/path_tracer/square_fractal/: square_fractal_bf_config.json  square_fractal_bvh_config.json  square_fractal_cuda_bf_config.json  square_fractal_cuda_bvh_config.json  square_fractal_cuda_kdtree_config.json  square_fractal_kdtree_config.json
App/ray_tracer/cornell_box/: cornell_box_bf_config.json  cornell_box_bvh_config.json  cornell_box_cuda_bf_config.json  cornell_box_cuda_bvh_config.json  cornell_box_cuda_kdtree_config.json  cornell_box_kdtree_config.json
App/ray_tracer/delta_fractal/: delta_fractal_bf_config.json  delta_fractal_bvh_config.json  delta_fractal_cuda_bf_config.json  delta_fractal_cuda_bvh_config.json  delta_fractal_cuda_kdtree_config.json  delta_fractal_kdtree_config.json
App/ray_tracer/dragon/: dragon_bf_config.json  dragon_bvh_config.json  dragon_cuda_bf_config.json  dragon_cuda_bvh_config.json  dragon_cuda_kdtree_config.json  dragon_kdtree_config.json
App/ray_tracer/lucy/: lucy_bf_config.json  lucy_bvh_config.json  lucy_cuda_bf_config.json  lucy_cuda_bvh_config.json  lucy_cuda_kdtree_config.json  lucy_kdtree_config.json
App/ray_tracer/sibenik/: sibenik_bf_config.json  sibenik_bvh_config.json  sibenik_cuda_bf_config.json  sibenik_cuda_bvh_config.json  sibenik_cuda_kdtree_config.json  sibenik_kdtree_config.json
App/ray_tracer/sierpinski_fractal/: sierpinski_fractal_bf_config.json  sierpinski_fractal_bvh_config.json  sierpinski_fractal_cuda_bf_config.json  (+3 more)
RayTracer/: AABB.cpp  AABB.h  BVHNode.cpp  BVHNode.h  Build.h  CMakeLists.txt  Camera.cpp  Camera.h  Color.h  Debug.h  DebugMaterial.cpp  DebugMaterial.h  DiffuseLight.cpp  DiffuseLight.h  IRenderTarget.h  KDTreeNode.cpp  KDTreeNode.h  Lambertian.cpp  Lambertian.h  Material.h  Math.h  Mesh.cuh  Mesh.h  Metrics.cpp  Metrics.h  PPMTarget.cpp  PPMTarget.h  Ray.cpp  Ray.h  Scene.cpp  Scene.h  Triangle.cpp  Triangle.h  test.cpp  test.h
RayTracer/device/: BVH.cuh  BruteForce.cuh  Camera.cuh  IAccelerationStructure.cuh  IDeviceResource.cuh  IRayGenerator.cuh  IRenderTarget.cuh  ISpacePartitioner.cuh  KDTree.cuh  PPMTarget.cuh  Scene.cu  Scene.cuh
RayTracer/host/: BVH.cpp  BVH.h  BruteForce.cpp  BruteForce.h  Camera.cpp  Camera.h  DebugMaterial.cpp  DebugMaterial.h  DiffuseLight.cpp  DiffuseLight.h  IAccelerationStructure.cpp  IAccelerationStructure.h  IMaterial.h  IRayGenerator.h  IRenderTarget.h  ISpacePartitioner.h  KDTree.cpp  KDTree.h  Lambertian.cpp  Lambertian.h  MaterialFactory.cpp  MaterialFactory.h  Mesh.cpp  Mesh.h  Metrics.cpp  PPMTarget.cpp  PPMTarget.h  Scene.cpp  Scene.h  StaticScene.cpp  StaticScene.h
Scenes/: cornell_box.mtl  dragon.mtl  lucy.mtl  sponza.mtl  square_fractal.mtl
Scenes/sibenik/: sibenik.mtl
Scenes/sponza/: crytek-sponza-v-ray-speed-tests-gamma.mtl
(+12 files in other folders)
